Fixed bug, fixed alignment of navbar

--- a/web/scss/components/navbar.scss
+++ b/web/scss/components/navbar.scss
@@ -73,3 +73,7 @@ $colHighlight   : #000000;
                 color: $colHighlight;
                 background-color: $bgHighlight; }}}
 }
+
+body {
+	padding-top: 60px;
+}
